# python-task-manager

./: .env.dist  .env.example  .gitignore  CLAUDE.md  README.md  README_es.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.agents/: architect.md  developer.md  planner.md  reviewer.md
instructions/: entregable1.md  entregable2.md  entregable3.md  entregable4.md  entregable5.md
plans/: entregable1.md  entregable3.md
prompts/: architecture_decision.md  code_review.md  implement_feature.md
skills/: task_crud.md
src/entregable/: __init__.py  ai_router.py  database.py  main.py  models.py  router.py  schemas.py  task_manager.py
src/entregable/providers/: __init__.py  azure.py  ollama.py  openai_compat.py
src/entregable/routes/: user_stories.py
src/entregable/services/: ai_service.py
src/entregable/static/css/: custom.css
src/entregable/static/js/: custom.js
src/entregable/templates/: base.html  tasks.html  user-stories.html
src/entregable1/: __init__.py  main.py  router.py  schemas.py  task_manager.py
tests/: conftest.py  test_ai.py  test_ai_service.py  test_api.py  test_models.py  test_providers.py  test_routes.py  test_schemas.py  test_task.py  test_task_manager.py
